# crep

./: .gitignore  LICENSE  Main.hs  README  Setup.hs  crep.cabal
BackEnd/: CPP.hs  Verbatim.hs
Core/: Capture.hs  DFA.hs  Matcher.hs  PartialOrder.hs  Partition.hs  RE.hs  Regex.hs  Rule.hs  Set.hs  SymbSet.hs  UTF8.hs  Utils.hs
Core/FA/: DFA.hs  RE.hs
Core/FA/UTF8/: Internal.hs
Core/Partition/: Internal.hs
FrontEnd/: Parsec.hs  RegexParser.hs  RuleParser.hs
docs/: notes-cs.org
examples/: html.rules  html.txt  intro.in  intro.rules
examples/tutor-cs/: 00-slon.in  00-slon.rules  01-svisti.in  01-svisti.rules  02-bratri.in  02-bratri.rules  03-obr.in  04-obr.in  04-obr.rules  05-cenzura.in  05-cenzura.rules  06-gol.in  06-gol.rules  07-zvirata.in  07-zvirata.rules  08-vice-usp.in  08-vice-usp.rules  09-konflikt.in  09-vice-usp.in  10-konflikt.in  10-konflikt.rules  10-pocitadla.rules
tests/: Matcher.hs  Partition.hs  TSymbSet.hs  UTF8.hs  run.hs
tests/ManualTesting/: k.rules  multibyte_in.txt  multibyte_rules.txt  orderings.in  orderings.rules  shortest_longest.rules  shortest_longest_in.txt
tests/SpeedTesting/: commands.txt  gencrep.sh  genperl.sh  gensed.sh  getwords.sh
