name: crep
version: 0.1
license: BSD3
license-file: LICENSE
copyright: Radek Micek 2009, 2010
author: Radek Micek
maintainer: Radek Micek <radek.micek@gmail.com>
stability: experimental
category: Text
synopsis: Competing regular expressions
extra-source-files:
  tests/run.hs
  docs/notes-cs.org
description: Text processing tool
tested-with: GHC == 6.12.1
cabal-version: >= 1.4
build-type: Simple

executable crep
  executable: crep
  main-is: Main.hs
  other-modules:
    Core.DFA
    Core.Matcher
    Core.PartialOrder
    Core.Partition
    Core.RE
    Core.Regex
    Core.Rule
    Core.UTF8
    Core.Utils
    FrontEnd.Parsec
    FrontEnd.RegexParser
    FrontEnd.RuleParser

  build-depends: base >= 4.2 && < 5, parsec >= 3.0.1 && < 3.2,
                 array >= 0.3 && < 0.4, containers >= 0.3 && < 0.4

  ghc-options: -Wall -fwarn-unused-binds -fwarn-unused-imports
               -fwarn-unused-matches -O2
