name: crep
version: 0.1
license: BSD3
license-file: LICENSE
copyright: Radek Micek 2009, 2010
author: Radek Micek
maintainer: Radek Micek <radek.micek@gmail.com>
stability: experimental
category: Text
synopsis: Competing regular expressions
extra-source-files:
  tests/run.hs
  tests/Partition.hs
  tests/UTF8.hs
  tests/ManualTesting/k_in.txt
  tests/ManualTesting/k_rules.txt
  tests/ManualTesting/multibyte_in.txt
  tests/ManualTesting/multibyte_rules.txt
  tests/ManualTesting/shortest_longest_in.txt
  tests/ManualTesting/shortest_longest_rules.txt
  docs/notes-cs.org
  README

description: Text processing tool
tested-with: GHC == 6.12.1
cabal-version: >= 1.4
build-type: Simple

executable crep
  executable: crep
  main-is: Main.hs
  other-modules:
    Core.Capture
    Core.DFA
    Core.Matcher
    Core.PartialOrder
    Core.Partition
    Core.RE
    Core.Regex
    Core.Rule
    Core.UTF8
    Core.Utils
    FrontEnd.Parsec
    FrontEnd.RegexParser
    FrontEnd.RuleParser
    BackEnd.CPP
    BackEnd.Verbatim

  build-depends: base >= 4.2 && < 5, parsec >= 3.0.1 && < 3.2,
                 array >= 0.3 && < 0.4, containers >= 0.3 && < 0.4,
                 mtl >= 1.1 && < 1.2, template-haskell > 2.4,
                 cmdargs >= 0.1 && < 0.2, utf8-string >= 0.3 && < 0.4

  ghc-options: -Wall -fwarn-unused-binds -fwarn-unused-imports
               -fwarn-unused-matches -O2
