name: crep
version: 0.1
license: BSD3
license-file: LICENSE
copyright: Radek Micek 2009, 2010
author: Radek Micek
maintainer: Radek Micek <radek.micek@gmail.com>
stability: experimental
category: Text
synopsis: Competing regular expressions
extra-source-files:
  examples/html.in
  examples/html.rules
  examples/intro.in
  examples/intro.rules

  examples/tutor-cs/00-slon.in
  examples/tutor-cs/00-slon.rules
  examples/tutor-cs/01-svisti.in
  examples/tutor-cs/01-svisti.rules
  examples/tutor-cs/02-bratri.in
  examples/tutor-cs/02-bratri.rules
  examples/tutor-cs/03-obr.in
  examples/tutor-cs/03-obr.rules
  examples/tutor-cs/04-obr.in
  examples/tutor-cs/04-obr.rules
  examples/tutor-cs/05-cenzura.in
  examples/tutor-cs/05-cenzura.rules
  examples/tutor-cs/06-gol.in
  examples/tutor-cs/06-gol.rules
  examples/tutor-cs/07-zvirata.in
  examples/tutor-cs/07-zvirata.rules
  examples/tutor-cs/08-vice-usp.in
  examples/tutor-cs/08-vice-usp.rules
  examples/tutor-cs/09-konflikt.in
  examples/tutor-cs/09-konflikt.rules
  examples/tutor-cs/10-pocitadla.in
  examples/tutor-cs/10-pocitadla.rules

  tests/run.hs
  tests/Matcher.hs
  tests/Partition.hs
  tests/UTF8.hs

  tests/ManualTesting/k.in
  tests/ManualTesting/k.rules
  tests/ManualTesting/multibyte.in
  tests/ManualTesting/multibyte.rules
  tests/ManualTesting/orderings.in
  tests/ManualTesting/orderings.rules
  tests/ManualTesting/shortest_longest.in
  tests/ManualTesting/shortest_longest.rules

  tests/SpeedTesting/commands.txt
  tests/SpeedTesting/gencrep.sh
  tests/SpeedTesting/genperl.sh
  tests/SpeedTesting/gensed.sh
  tests/SpeedTesting/getwords.sh

  docs/notes-cs.org
  README

description: Text processing tool
tested-with: GHC == 6.12.1
cabal-version: >= 1.4
build-type: Simple

executable crep
  executable: crep
  main-is: Main.hs
  other-modules:
    Core.Capture
    Core.DFA
    Core.Matcher
    Core.PartialOrder
    Core.Partition
    Core.RE
    Core.Regex
    Core.Rule
    Core.UTF8
    Core.Utils
    FrontEnd.Parsec
    FrontEnd.RegexParser
    FrontEnd.RuleParser
    BackEnd.CPP
    BackEnd.Verbatim

  build-depends: base >= 4.2 && < 5, parsec >= 3.0.1 && < 3.2,
                 array >= 0.3 && < 0.4, containers >= 0.3 && < 0.4,
                 mtl >= 1.1 && < 1.2, template-haskell > 2.4,
                 cmdargs >= 0.1 && < 0.2, utf8-string >= 0.3 && < 0.4

  ghc-options: -Wall -fwarn-unused-binds -fwarn-unused-imports
               -fwarn-unused-matches -O2
